97_kraken: Fixed media circles
Merge branch '97_kraken' into 'main'

Reviewed by 
Approved by Approved-by: Daniel Vesterlund <id19dvd@cs.umu.se>

Description
https://trello.com/c/oXMO7asn

Fixed media selection circles being cut off

Branch commits
* Fixed media selection circles being cut off

--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -29,8 +29,8 @@
 .carousel .control-dots {
     position: absolute;
     bottom: 0;
-    margin: -5px 0;
     padding: 0;
+	margin: 0;
     text-align: center;
     width: 100%;
     z-index: 1;
